# dear-py-gui-demo

./: README.md  pyproject.toml
dearpygui_demo/: first_run.py
tests/: test_dearpygui_demo.py
